--- a/src/ui/component/comment/CommentEditor.pug
+++ b/src/ui/component/comment/CommentEditor.pug
@@ -34,7 +34,7 @@ style.
 		justify-content flex-end
 		margin-top 6px
 	.comment-editor-text-field
-		border 1px solid var(--c-score-0)
+		border 1px solid
 		border-radius 1em
 		font 13px monospace
 		line-height inherit
