--- a/src/ui/component/global/GlobalNetworkStatus.pug
+++ b/src/ui/component/global/GlobalNetworkStatus.pug
@@ -36,7 +36,7 @@ slot
 style.
 	#network-status
 		font-size 2em
-		font-weight bold
+		font-weight var(--f-wght-strong)
 		left 0
 		padding 10px
 		position fixed
