--- a/src/ui/component/global/GlobalRadialMenu.pug
+++ b/src/ui/component/global/GlobalRadialMenu.pug
@@ -17,7 +17,7 @@ script.
 	menu = null
 	menu_variant = null
 	position = null
-	radius = 17
+	radius = 21
 	target_element = null
 	x_correction = document.documentElement.offsetLeft # adjust for broken fixed positioning when using scrollbar-gutter: stable (Chromium bug #1251856)
 
@@ -115,7 +115,7 @@ style.
 		&.radial-menu-icon-selected
 			font-size 2em
 	.radial-menu-icon-center
-		color var(--c-text-weak)
+		color salmon
 	.radial-menu-icon-east
 		left 100%
 	.radial-menu-icon-north
