--- a/src/ui/component/shared/ButtonFrame.pug
+++ b/src/ui/component/shared/ButtonFrame.pug
@@ -5,7 +5,7 @@ fieldset.button-frame
 
 style.
 	.button-frame
-		background var(--c-blend-normal)
+		background var(--c-shade-weak)
 		border-radius 7px
 		display inline-flex
 		padding 10px
