--- a/src/ui/component/shared/HotkeyLabel.pug
+++ b/src/ui/component/shared/HotkeyLabel.pug
@@ -6,11 +6,11 @@ kbd {String(key).toUpperCase()}
 style.
 	kbd
 		align-items center
-		background var(--c-blend-normal)
+		background var(--c-blend-weak)
 		border-radius 4px
 		display inline-flex
 		font-size 10px
-		font-weight bold
+		font-weight var(--f-wght-strong)
 		height 17px
 		justify-content center
 		line-height 1
