--- a/src/ui/component/shared/MediaPlayer.pug
+++ b/src/ui/component/shared/MediaPlayer.pug
@@ -215,7 +215,7 @@ style.
 			opacity 1
 	.media-scrobbler
 		align-items center
-		background var(--c-blend-normal)
+		background var(--c-blend-weak)
 		border-radius 6px
 		display flex
 		flex 1
@@ -247,7 +247,7 @@ style.
 			height 24px
 			width 4px
 	.media-volume
-		background var(--c-blend-normal)
+		background var(--c-blend-weak)
 		border-radius 6px
 		padding 0 6px
 		position relative
@@ -262,7 +262,7 @@ style.
 		align-self flex-start
 		background none !important
 		color var(--c-text-faint)
-		font-weight bold
+		font-weight var(--f-wght-strong)
 		left 1px
 		line-height 1
 		position relative
