--- a/src/ui/component/shared/Popup.pug
+++ b/src/ui/component/shared/Popup.pug
@@ -26,17 +26,17 @@ style.
 		width 100dvw
 		z-index 10
 	.popup-body
-		background var(--c-bg)
+		background var(--c-subreddit-theme)
 		border-radius 12px
-		box-shadow 0 0 24px var(--c-blend-normal)
-		color var(--c-text-strong)
+		box-shadow 0 0 24px var(--c-blend-weak)
+		color var(--c-subreddit-theme-text)
 		max-height 96dvh
 		max-width 700px
 		overflow auto
 		padding 2em
 		position relative
 	.popup-overlay
-		background var(--c-con-xstrong)
+		background var(--c-shade-strong)
 		height 100%
 		left 0
 		position absolute
