--- a/src/ui/component/shared/TextInput.pug
+++ b/src/ui/component/shared/TextInput.pug
@@ -34,8 +34,8 @@ style.
 	.text-input
 		border-bottom 2px solid var(--c-text-faint)
 		font-size 18px
-		font-weight bold
-		padding 0 5px
+		font-weight var(--f-wght-strong)
+		line-height calc(5rem/3)
 		width 240px
 		&:focus
 			border-color var(--c-text-strong)
