--- a/src/ui/component/subreddit/Subreddit.pug
+++ b/src/ui/component/subreddit/Subreddit.pug
@@ -182,17 +182,17 @@ svelte:head
 
 style.
 	.subreddit
-		padding-right 80px
-		width 640px
+		padding-right 96px
+		width 672px
 	.subreddit-content
 		margin-top 2em
-		padding-left calc(64px + 1em)
+		padding-left 96px
 	.subreddit-flair-search-close-handler
 		position absolute
 	.subreddit-header
 		align-items flex-end
 		display grid
-		gap 1em
+		gap 32px
 		grid-template-columns 64px 1fr
 		justify-items flex-start
 	.subreddit-header-options
@@ -208,16 +208,16 @@ style.
 	.subreddit-posts-header
 		align-items flex-start
 		display grid
-		gap 1em
+		gap 32px
 		grid-template-columns 64px 1fr
 		justify-items flex-start
-		margin-top 5px
+		margin-top 10px
 	.subreddit-posts-options
 		display flex
 		gap 5px
 	.subreddit-posts-options-search
 		display flex
-		gap 5px
+		gap 10px
 	.subreddit-posts-options-sort
 		display flex
-		gap 5px
+		gap 2px
