--- a/src/ui/component/subreddit/SubredditWidget.pug
+++ b/src/ui/component/subreddit/SubredditWidget.pug
@@ -63,14 +63,14 @@ style.
 		display flex
 		flex-flow column nowrap
 		gap 1em
-		width 320px
 	.subreddit-widget:not(.subreddit-widget-type-image)
-		background var(--c-blend-normal)
+		background var(--c-blend-weak)
 		border-radius 7px
 		padding 1em
 	.subreddit-widget-calendar-events-empty
 		color var(--c-text-weak)
 	.subreddit-widget-image
+		background var(--c-con-weak)
 		border-radius 7px
 	.subreddit-widget-link
 		margin-top 0.333em
