--- a/src/ui/component/global/GlobalThemeColors.pug
+++ b/src/ui/component/global/GlobalThemeColors.pug
@@ -3,8 +3,6 @@ script.
 	
 	import { HexColor } from '../../../lib/index.js'
 
-	base_theme = 'light'
-
 	set_theme_colors = (main_color, secondary_color) ->
 		if !main_color
 			main_color = secondary_color
@@ -13,13 +11,13 @@ script.
 		document.body.style.setProperty('--c-subreddit-theme', main_color or 'var(--c-subreddit-theme-default)')
 		document.body.style.setProperty('--c-subreddit-theme-secondary', secondary_color or 'var(--c-subreddit-theme-secondary-default)')
 		document.body.style.setProperty('--c-subreddit-theme-text', text_color or 'var(--c-subreddit-theme-text-default)')
-		switch base_theme
-			when 'dark'
-				document.body.classList.remove('color-strategy-black-text')
-				document.body.classList.add('color-strategy-white-text')
-			else
+		switch text_color
+			when '#000000'
 				document.body.classList.remove('color-strategy-white-text')
 				document.body.classList.add('color-strategy-black-text')
+			else
+				document.body.classList.remove('color-strategy-black-text')
+				document.body.classList.add('color-strategy-white-text')
 
 	setContext('set_theme_colors', set_theme_colors)
 	
