--- a/src/ui/component/global/index.html
+++ b/src/ui/component/global/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<!-- basic info -->
 		<meta charset='utf-8'>
+		<meta name='viewport' content='width=720px'>
 		<title>r3</title>
 		<!-- webpack bundle -->
 		<%= htmlWebpackPlugin.tags.headTags %>
