--- a/src/ui/component/user/UserByline.pug
+++ b/src/ui/component/user/UserByline.pug
@@ -8,16 +8,15 @@ script.
 	export name = null
 
 span.user-byline
-	section.user-byline-basic-info
-		a.user-byline-name(href='/u/{name}') {name}
-		{#if distinguish === 'submitter'}
-			span.user-byline-distinguish(class='user-byline-distinguish-{distinguish}') OP
-		{:else if distinguish === 'moderator'}
-			span.user-byline-distinguish(class='user-byline-distinguish-{distinguish}') MOD
-		{:else if distinguish === 'admin'}
-			span.user-byline-distinguish(class='user-byline-distinguish-{distinguish}') ADMIN
-		{:else if distinguish === 'special'}
-			span.user-byline-distinguish(class='user-byline-distinguish-{distinguish}') EX-ADMIN
+	a.user-byline-name(href='/u/{name}') {name}
+	{#if distinguish === 'submitter'}
+		span.user-byline-distinguish(class='user-byline-distinguish-{distinguish}') OP
+	{:else if distinguish === 'moderator'}
+		span.user-byline-distinguish(class='user-byline-distinguish-{distinguish}') MOD
+	{:else if distinguish === 'admin'}
+		span.user-byline-distinguish(class='user-byline-distinguish-{distinguish}') ADMIN
+	{:else if distinguish === 'special'}
+		span.user-byline-distinguish(class='user-byline-distinguish-{distinguish}') EX-ADMIN
 	{#if flair_text}
 		UserFlair(color={flair_color} emoji_style='image' rich_text={flair_rich_text} text={flair_text})
 
@@ -27,7 +26,6 @@ style.
 		color var(--c-text-weak)
 		display flex
 		font-size 12px
-		justify-content space-between
 		letter-spacing calc(2px/3)
 		gap 1em
 	.user-byline-basic-info
@@ -35,7 +33,7 @@ style.
 		gap 1em
 		flex 0 0 auto
 	.user-byline-distinguish
-		font-weight bold
+		font-weight var(--f-wght-strong)
 	.user-byline-distinguish-admin
 		color red
 	.user-byline-distinguish-moderator
